--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ homepage = "https://github.com/myyrakle/trash_dumper/blob/master/README.md"
 atty = { version = "0.2.14", optional = true }
 structopt = { version = "0.3.18", optional = true }
 clap = { version = "4.4.18", features = ["derive"] }
+serde = { version = "1", features = ["derive"] }
