[#3] dump 기능 구현

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,11 @@ atty = { version = "0.2.14", optional = true }
 structopt = { version = "0.3.18", optional = true }
 clap = { version = "4.4.18", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
+
+[dependencies.uuid]
+version = "1.7.0"
+features = [
+    "v4",                # Lets you generate random UUIDs
+    "fast-rng",          # Use a faster (but still sufficiently random) RNG
+    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+]
